--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ exclude = [
 
 [dependencies]
 clap = "4"
+derive_builder = "0.12"
 dirs = "5"
+dunce = "1"
 env_logger = "0.10"
 log = "0.4"
 pulldown-cmark = "0.9"
